# ibex-demo-system

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  ibex_demo_system.cc  ibex_demo_system.core  ibex_demo_system_core.core  ibex_demo_system_main.cc  ibex_super_system.core  ibex_super_system_core.core  pulp_riscv_dbg.core  pyproject.toml  python-requirements.txt  rv_timer.core  vivado.jou  vivado_pid3140.str
.github/workflows/: cmake.yml  rust.yml
container/: Dockerfile  README.md  apt-requirements.txt  novnc.pem  start.sh
data/: ibex.svd  lowrisc.art  pins_artya7.xdc  pins_artys7.xdc  pins_blackboard.xdc  pins_boolean.xdc  pins_cw305.xdc  pins_cw312a35.xdc  pins_nexysa7.xdc  pins_pynqz2.xdc  pins_sonata.xdc
dependencies/: edalize.nix  flake.nix  fusesoc.nix  ipyxact.nix  okonomiyaki.nix  overlay.nix  python-overlay.nix  riscv-gcc-toolchain-lowrisc.nix  riscv-isa-sim.nix  riscv_gcc.nix  simplesat.nix  vivado.nix  zipfile2.nix
dv/verilator/: demo_system_verilator_lint.vlt  ibex_demo_system.cc  ibex_demo_system.h  ibex_demo_system_main.cc  plicdpi.sv  top_verilator.sv
rtl/fpga/: clkgen_pynqz2.sv  clkgen_sonata.sv  rst_ctrl.sv  top_artya7.sv  top_artys7.sv  top_blackboard.sv  top_boolean.sv  top_cw305.sv  top_cw312a35.sv  top_nexysa7.sv  top_pynqz2.sv  top_sonata.sv
rtl/system/: async_fifo.v  cdc.v  clock_divider.v  debounce.sv  dm_top.sv  fifo_queue.v  gpio.sv  hex_disp_driver.v  ibex_demo_system.sv  ibex_super_system.sv  jtag_id_pkg.sv  plic.sv  pwm.sv  pwm_wrapper.sv  rx_module.v  spi.sv  spi_host.sv  spi_top.sv  sync_fifo.v  synchronizer.v  tx_module.v  uart.sv  uart.v  uart.vh  uart_rx.v  uart_top.v  uart_tx.v
rules/: cc.nix  default.nix
sw/: CMakeLists.txt  gcc_toolchain.cmake
sw/blank/: CMakeLists.txt
sw/c/: .clang-format  gcc_toolchain.cmake
sw/c/blank/: CMakeLists.txt  blank.S
sw/c/common/: CMakeLists.txt  default.nix  demo_system.c  demo_system.h  demo_system_regs.h  dev_access.h  gpio.c  gpio.h  plic.c  plic.h  pwm.c  pwm.h  spi.c  spi.h  timer.c  timer.h  uart.c  uart.h
sw/c/demo/: CMakeLists.txt  default.nix
sw/c/demo/basic-passwdcheck/: CMakeLists.txt
sw/c/demo/hello_world/: CMakeLists.txt  main.c
sw/c/demo/lcd_st7735/: CMakeLists.txt  fbcon.c  fbcon.h  fractal_fixed.c  fractal_float.c  fractal_palette.c  lcd.c  lcd.h  lowrisc_logo.h  main.c
sw/c/demo/lcd_st7735/coremark/: core_portme.c  ee_printf.c
sw/c/demo/simpleserial-aes/: CMakeLists.txt  README
sw/common/: CMakeLists.txt  crt0.S  demo_system.c  demo_system.h  dev_access.h  gpio.c  gpio.h  link.ld  spi.c  spi.h  super_system.c  super_system.h  timer.c  timer.h  uart.c  uart.h
sw/demo/: CMakeLists.txt  cmplx_test  main.c
sw/demo/basic-passwdcheck/: CMakeLists.txt  README
sw/demo/hello_world/: main.c
sw/demo/lcd_st7735/: CMakeLists.txt  fractal.c  fractal.h  fractal_cmplx_insn.c  fractal_fixed.c  fractal_float.c  lcd.h  main.c
sw/demo/simpleserial-aes/: CMakeLists.txt
sw/rust/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
sw/rust/.cargo/: config.toml
sw/rust/demo/hello_world/: Cargo.toml  README.md
sw/rust/demo/hello_world/.cargo/: config.toml
sw/rust/demo/hello_world/src/: main.rs
sw/rust/demo/lcd_hal/: Cargo.toml
sw/rust/demo/lcd_hal/.cargo/: config.toml
sw/rust/demo/lcd_hal/resorces/: lowrisc.rgb565
sw/rust/demo/lcd_hal/src/: main.rs
sw/rust/demo/led/: Cargo.toml  README.md
sw/rust/demo/led/.cargo/: config.toml
sw/rust/demo/led/src/: main.rs
sw/rust/demo/led_hal/: Cargo.toml  README.md
sw/rust/demo/led_hal/src/: main.rs
sw/rust/demo/pwm_hal/: Cargo.toml
sw/rust/demo/pwm_hal/.cargo/: config.toml
sw/rust/demo/pwm_hal/src/: main.rs
sw/rust/ibex-demo-system-hal/: Cargo.toml
sw/rust/ibex-demo-system-hal/src/: lib.rs  pwm.rs  serial.rs  spi.rs  timer.rs  utils.rs
sw/rust/ibex-demo-system-hal/src/gpio/: dyn_pin.rs  mod.rs  pin.rs  static_pin.rs
sw/rust/ibex-demo-system-pac/: Cargo.toml  README.md  build.rs
sw/rust/ibex-demo-system-pac/src/: lib.rs
util/: arty-a7-openocd-cfg.tcl  artys7-25-openocd-cfg.tcl  artys7-50-openocd-cfg.tcl  blackboard-openocd-cfg.tcl  boolean-openocd-cfg.tcl  load_demo_system.sh  load_super_system.sh  nexysa7-openocd-cfg.tcl  pynq-z2-openocd-cfg.tcl  sonata-olimex-openocd-cfg.tcl  sonata-openocd-cfg.tcl
