# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ibex-demo-system-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
fugit = "0.3.7"
ibex-demo-system-pac = {path = "../ibex-demo-system-pac"}
nb = "1.1.0"
riscv = "0.10.1"
void = { version = "1.0.2", default-features = false }
