# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ibex-demo-system-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1.1", optional = true }
riscv = "0.11"
riscv-rt = { version = "0.12", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]
default = ["critical-section"]

[build-dependencies]
svd2rust = "0.29.0"
