# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
riscv = "0.10"
riscv-rt = "0.11.0"
riscv-semihosting = {git="https://github.com/riscv-rust/riscv-semihosting", branch="master", features=["user-mode"]}
