# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lcd_hal"
version = "0.1.0"
edition = "2021"
# This build script configures the linker script to use.
build = "../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.0"
st7735-lcd = "0.10.0"
panic-halt = "0.2.0"
riscv = {version = "0.11.1", features = ["critical-section-single-hart"]}
riscv-rt = "0.12.2"
ibex-demo-system-hal = {path = "../../ibex-demo-system-hal"}
embedded-hal = "1.0.0"
tinybmp = "0.5.0"

