# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "led"
version = "0.1.0"
edition = "2021"
# This build script configures the linker script to use.
build = "../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
riscv = {version = "0.11", features = ["critical-section-single-hart"]}
riscv-rt = "0.12"
ibex-demo-system-pac = {path = "../../ibex-demo-system-pac"}
embedded-hal = "1.0.0"
